# sfft

./: CMakeLists.txt  README.md  benchmark.sh  gls_b.hpp  main_b.cpp  periodogram_b.hpp  rayleigh_fft_s.hpp
include/: avx2sort.h  fast_float.h  fma_trig.hpp  mintrig.hpp
periodograms/: rayleigh_direct_b.hpp  rayleigh_fft_b.hpp
src/: main_b.cpp  periodogram_b.hpp
src/periodograms/: gls_fasper_b.hpp  gls_fft_b.hpp  gls_rec_b.hpp  gls_simd_b.hpp  gls_slow_b.hpp  rayleigh_fasper_b.hpp  rayleigh_fft_b.hpp  rayleigh_rec_b.hpp  rayleigh_simd_b.hpp  rayleigh_slow_b.hpp
src/utils/: convolution.hpp  extirpolation.hpp  fftgrid.hpp  fftgrid_fasper.hpp  grid.hpp  readout.hpp  vertex.hpp
utils/: extirpolation.hpp  fftgrid.hpp  readout.hpp
